[tool.poetry]
name = "rane"
version = "0.1.0"
description = ""
authors = ["Justin Force <justin.force@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
rane = "rane.cli:main"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pillow = "^10.3.0"
matplotlib = "^3.9.0"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pylint = "^3.1.0"
flake8 = "^7.0.0"
pdoc = "^14.4.0"
coverage = "^7.5.1"
pytest-cov = "^5.0.0"

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "88"

[tool.pylint."messages_control"]
disable = [
    # These are useful to disable temporarily while developing
    # "C0114", # missing-module-docstring
    # "C0115", # missing-class-docstring
    # "C0116", # missing-function-docstring
    # "R0903", # too-few-public-methods
]
